<resources>
    <string name="app_name">ImageSelector</string>
    <string name="picture">Images</string>
    <string name="all_image">All Images</string>
    <string name="take_picture">Take Photo</string>
    <string name="preview">Preview</string>
    <string name="preview_num">Preview(%1$d)</string>
    <string name="choose">Select</string>
    <string name="done">Done</string>
    <string name="use">OK</string>
    <string name="num_postfix">%1$d</string>
    <string name="done_num">Done(%1$d/%2$d)</string>
    <string name="message_max_num">Up to %1$d photos can be selected</string>
    <string name="message_min_num">Please select 1 photo at least</string>
    <string name="save_ing">Saving picture…</string>
    <string name="save_success">Picture saved at </string>
    <string name="no_pic">There is no picture in this phone.</string>
    <string name="crop">Crop</string>

    <string name="select_picture">Select picture</string>
    <string name="max_select_num">Maximum number of options</string>
    <string name="select_mode">Selection mode</string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="show_camera">Show Camera</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="enable_preview">Enable Preview</string>
    <string name="enable_crop">Enable Crop Image</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>

    <string name="test_select_image">Select Image</string>
</resources>
