<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_select_num"
            android:textColor="@color/text_color"
            android:textSize="@dimen/large_text" />

        <include layout="@layout/layout_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_mode"
            android:textColor="@color/text_color"
            android:textSize="@dimen/large_text" />

        <RadioGroup
            android:id="@+id/select_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/mode_multiple"
            android:orientation="horizontal"
            android:paddingTop="@dimen/row_space_big"
            android:paddingBottom="@dimen/row_space_big">

            <RadioButton
                android:id="@+id/mode_multiple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multiple"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/mode_single"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/row_space_big"
                android:layout_weight="1.5"
                android:text="@string/single"
                android:textColor="@color/text_color" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_camera"
            android:textColor="@color/text_color"
            android:textSize="@dimen/large_text" />

        <RadioGroup
            android:id="@+id/show_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/camera_yes"
            android:orientation="horizontal"
            android:paddingTop="@dimen/row_space_big"
            android:paddingBottom="@dimen/row_space_big">

            <RadioButton
                android:id="@+id/camera_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/camera_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/row_space_big"
                android:layout_weight="1.5"
                android:text="@string/no"
                android:textColor="@color/text_color" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_preview"
            android:textColor="@color/text_color"
            android:textSize="@dimen/large_text" />

        <RadioGroup
            android:id="@+id/enable_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/preview_enable"
            android:orientation="horizontal"
            android:paddingTop="@dimen/row_space_big"
            android:paddingBottom="@dimen/row_space_big">

            <RadioButton
                android:id="@+id/preview_enable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enable"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/preview_disable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/row_space_big"
                android:layout_weight="1.5"
                android:text="@string/disable"
                android:textColor="@color/text_color" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_crop"
            android:textColor="@color/text_color"
            android:textSize="@dimen/large_text" />

        <RadioGroup
            android:id="@+id/enable_crop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/crop_disable"
            android:orientation="horizontal"
            android:paddingTop="@dimen/row_space_big"
            android:paddingBottom="@dimen/row_space_big">

            <RadioButton
                android:id="@+id/crop_enable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/enable"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/crop_disable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/row_space_big"
                android:layout_weight="1.5"
                android:text="@string/disable"
                android:textColor="@color/text_color" />
        </RadioGroup>

        <Button
            android:id="@+id/select_picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_selctor_bar_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_round_green_enable"
            android:text="@string/select_picture"
            android:textColor="@color/textcolor_on_appcolor"
            android:textSize="@dimen/large_text" />
    </LinearLayout>
</LinearLayout>
